--- a/KatLab/Properties/Resources.resx
+++ b/KatLab/Properties/Resources.resx
@@ -541,4 +541,7 @@
   <data name="Martin_Berube_Animal_Owl" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Martin-Berube-Animal-Owl.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="powerpoint_background_for_school_cortezcolorado_with_regard_to_powerpoint_backgrounds_school" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\powerpoint-background-for-school-cortezcolorado-with-regard-to-powerpoint-backgrounds-school.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
